# -toy-StackMachine

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Core/: CMakeLists.txt
Core/Lexer/: CMakeLists.txt
Core/Lexer/include/: Lexer.hpp
Core/Lexer/src/: Lexer.cpp
Core/Logger/: CMakeLists.txt
Core/Logger/include/: Logger.hpp
Core/Logger/src/: Logger.cpp
Core/include/: Core.hpp  Token.hpp
Core/interface/: ILexer.hpp  ILogger.hpp
Core/src/: Float.hpp  IOperand.hpp  Int.hpp  Operand.hpp  OperandFactory.cpp  OperandFactory.hpp  Parser.cpp  Parser.hpp  Stack.cpp  Stack.hpp  Token.cpp
Core/test/: double.test.cpp  float.test.cpp  int16.test.cpp  int32.test.cpp  int8.test.cpp  parser.test.cpp  test.hpp  type.test.cpp  util.hpp
Lexer/: CMakeLists.txt
Lexer/src/: Lexer.cpp  Lexer.hpp  Token.cpp
samples/: 01_push_int8.avm
